--- a/kv/mirsniffer.kv
+++ b/kv/mirsniffer.kv
@@ -1,4 +1,4 @@
-#:import CardTransition kivy.uix.screenmanager.CardTransition
+#:import SlideTransition kivy.uix.screenmanager.SlideTransition
 <MirSniffer>:
     canvas.before:
         Color:
@@ -6,6 +6,13 @@
         Rectangle:
             pos: self.pos
             size: self.size
-    transition: CardTransition()
+    transition: SlideTransition()
     MainScreen:
     Mir161:
+    Mir162:
+    Mir319:
+    Mir325:
+    Mir326:
+    Mir327:
+
+
